<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarPasswordActivity"

    >

    <include
        layout="@layout/activity_toolbar"
        ></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.66"
                android:background="@color/colorPrimary"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"

                    android:layout_centerInParent="true"
                    >

                </TextView>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.34"
                android:background="@color/colorLightPrimary"
                android:orientation="vertical"
                >

                <EditText
                    android:id="@+id/user_recuperar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:textColorHint="@color/colortexto1"></EditText>

                <EditText
                    android:id="@+id/email_recuperar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/colortexto1"
                    ></EditText>



                <Button
                    android:id="@+id/boton_recuperar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recuperar"
                    android:layout_gravity="center_horizontal"

                    />


            </LinearLayout>


        </LinearLayout>



    </ScrollView>




</androidx.coordinatorlayout.widget.CoordinatorLayout>

