<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.66"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"

                android:layout_centerInParent="true"
                >

            </TextView>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.34"
            android:background="@color/colorLightPrimary"
            android:orientation="vertical"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                android:textColorHint="@color/colortexto1"></EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colortexto1"
                ></EditText>

            <Button
                android:id="@+id/boton_ingresar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar"
                android:layout_gravity="center_horizontal"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¿No tienes cuenta?.Registrate"
                    android:onClick="accederRegistrar"
                    >

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recuperar cuenta ahora"
                    android:onClick="accederRecuperar"
                    ></TextView>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>

