<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuarioActivity">

    <include layout="@layout/activity_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="50dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"


        >





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.66"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:id="@+id/TituloText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="0dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/colortexto1"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/TextSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="162dp"
                android:layout_marginEnd="127dp"
                android:text="Registro de Usuario"
                android:textColor="#000000"
                android:textSize="18sp" />


        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.34"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/RutReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese RUT"></EditText>

            <EditText
                android:id="@+id/NombreReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese Nombres"></EditText>

            <EditText
                android:id="@+id/ApeReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingrese Apellidos"
                android:inputType="textPersonName"></EditText>

            <EditText
                android:id="@+id/EmailReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"></EditText>

            <EditText
                android:id="@+id/UserReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"></EditText>

            <EditText
                android:id="@+id/PasswordReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">
            </EditText>

            <Button
                android:id="@+id/RegButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/regbutton"
                android:onClick="poblar_objeto"/>




        </LinearLayout>


    </LinearLayout>


    </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>